libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-tuple-literal.jsonc
//@ run: fail
//@ description: any value that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::math",
  { "#tuple": [{ "#literal": 1 }] },
  //~^ ERROR expected `*`, a tuple of names, or a struct of aliases
  "x"
]
